--- a/index.html
+++ b/index.html
@@ -11,64 +11,35 @@ body{
   background: radial-gradient(circle, #ff5f6d, #ffc371);
   text-align:center;
   color:white;
-  overflow-y:auto;   /* ✅ scroll allow */
+  overflow-y:auto;
+}
 
-  .card{
-  margin:30px auto;
-
-  .valentine{
+.valentine{
   font-size:28px;
   font-weight:700;
   margin-bottom:10px;
   animation:glow 2s ease-in-out infinite;
-  text-shadow:0 0 10px rgba(255,255,255,.6);
 }
 
 @keyframes glow{
-  0%{
-    transform:scale(1);
-    opacity:0.7;
-  }
-  50%{
-    transform:scale(1.1);
-    opacity:1;
-  }
-  100%{
-    transform:scale(1);
-    opacity:0.7;
-  }
+  0%{transform:scale(1);opacity:.7;}
+  50%{transform:scale(1.1);opacity:1;}
+  100%{transform:scale(1);opacity:.7;}
 }
 
-}
-
-}
-
-/* Floating hearts */
-.heart{
-  position:fixed;
-  animation:float 6s linear infinite;
-  opacity:.5;
-}
-@keyframes float{
-  from{bottom:-10%;}
-  to{bottom:110%;}
-}
-
-/* Front page */
-#front{margin-top:120px;}
 .start{
   background:white;
   color:#ff416c;
   font-size:19px;
   padding:16px 0;
-  width:260px;              /* 👈 neelam koodi */
+  width:260px;
   border-radius:35px;
   border:none;
   cursor:pointer;
   box-shadow:0 8px 20px rgba(0,0,0,.25);
   font-weight:600;
 }
-/* Quiz */
+
 #bar{height:8px;background:rgba(255,255,255,.4);}
 #fill{height:100%;width:0;background:lime;}
 
@@ -77,15 +48,10 @@ body{
   color:black;
   width:90%;
   max-width:350px;
-  margin:60px auto;
+  margin:40px auto;
   padding:20px;
   border-radius:20px;
   box-shadow:0 10px 25px rgba(0,0,0,.3);
-  
-  .valentine{
-  letter-spacing:1px;
-}
-
 }
 
 img{
@@ -107,20 +73,32 @@ button{
 .opt{background:#eee;}
 .yes{background:green;color:white;font-size:18px;}
 .no{background:red;color:white;position:relative;}
+
+.heart{
+  position:fixed;
+  animation:float 6s linear infinite;
+  opacity:.5;
+}
+
+@keyframes float{
+  from{bottom:-10%;}
+  to{bottom:110%;}
+}
 </style>
 </head>
 
 <body>
 
-<audio id="bgm" loop>
+<!-- 🎵 MUSIC (front → last page) -->
+<audio id="bgm" autoplay loop>
   <source src="music.mp3" type="audio/mpeg">
 </audio>
 
 <!-- FRONT -->
-<div id="front">
-  <h2 class="valentine">💖 Happy Valentine’s Day My Love💖</h2>
-  <h1>❤️ Hi Manojetta❤️</h1>
-  <p>One small test just for you..But all my love is here 😌</p>
+<div id="front" style="margin-top:120px;">
+  <h2 class="valentine">💖 Happy Valentine’s Day 💖</h2>
+  <h1>❤️ Hi Manoj ❤️</h1>
+  <p>One small test just for you 😌</p>
   <button class="start" onclick="start()">Start Test ❤️</button>
 </div>
 
@@ -130,7 +108,7 @@ button{
   <h3 id="score">Score: 0</h3>
 
   <div class="card" id="box">
-    <img id="img" alt="memory">
+    <img id="img">
     <h3 id="q"></h3>
     <div id="opts"></div>
   </div>
@@ -141,19 +119,19 @@ let i=0,s=0;
 
 const quiz=[
  {
-  img:"./your_memories/pic1.jpg",
+  img:"your_memories/pic1.jpg",
   q:"Where did we click this photo?",
   o:["Kava","Kodaikanal","Munnar"],
   a:"Kodaikanal"
  },
  {
-  img:"./your_memories/pic2.jpg",
+  img:"your_memories/pic2.jpg",
   q:"When did we first send message?",
   o:["Dec 5","Nov 15","Oct 3"],
   a:"Nov 15"
  },
  {
-  img:"./your_memories/pic3.jpg",
+  img:"your_memories/pic3.jpg",
   q:"When did we first go out and date?",
   o:["Jan 15 ❤️","Feb 14","Don’t remember"],
   a:"Jan 15 ❤️"
@@ -161,7 +139,7 @@ const quiz=[
 ];
 
 function start(){
- document.getElementById("bgm").play();
+ document.getElementById("bgm").play(); // mobile support
  front.style.display="none";
  quizDiv.style.display="block";
  load();
@@ -193,7 +171,7 @@ function check(x){
   s++;
   alert("Correct 😘 Ettan ellam ariyaloo!");
  }else{
-  alert("Wrong 😜 pakshe ettan ennum ende muthalee ❤️");
+  alert("Wrong 😜 Pakshe nee ente thanne ❤️");
  }
  i++;
  score.innerText="Score: "+s;
@@ -207,43 +185,27 @@ function move(btn){
 }
 
 function yes(){
-  const music = document.getElementById("bgm");
-  music.play(); // safety
-
-  front.style.display = "none";
-  quizDiv.style.display = "none";
-
-  const final = document.createElement("div");
-  final.innerHTML = `
-    <div style="
-      height:100vh;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-      align-items:center;
-      text-align:center;
-      color:white;
-    ">
-      <h1>❤️ THANK YOU FOR CHOOSING ME ❤️</h1>
-      <h2>You are my today, tomorrow & forever 💍</h2>
-
-      <h1 style="
-        margin-top:40px;
-        font-size:36px;
-        font-weight:800;
-      ">
-        I LOVE YOU ETTA 💋
-      </h1>
-
-      <h3 style="margin-top:20px;">
-        – Yours always, Aswathi 💖
-      </h3>
-    </div>
-  `;
-  document.body.appendChild(final);
+ document.body.innerHTML=`
+  <div style="
+    height:100vh;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    color:white;
+  ">
+    <h1>❤️ THANK YOU FOR CHOOSING ME ❤️</h1>
+    <h2>You are my today, tomorrow & forever 💍</h2>
+    <h1 style="margin-top:40px;font-size:36px;font-weight:800;">
+      I LOVE YOU ETTA 💋
+    </h1>
+    <h3>– Yours always, Aswathi 💖</h3>
+  </div>
+ `;
 }
 
-/* Hearts */
+// floating hearts
 setInterval(()=>{
  let h=document.createElement("div");
  h.className="heart";
